<resources>
    <string name="app_name">VAP</string>
    <string name="strongloop_logo">VAP logo</string>
    <string name="hint_swipe_right_to_left">(Hint: Swipe right-to-left)</string>
    <string name="finale_content"><![CDATA[
        <h3>Credits</h3>
        <p><b>Author</b></br> Alex X. Galloway</p>
           ]]></string>
    <string name="finale_callToAction"><![CDATA[
        <p>For more info on the framework:<p>
        <p><big><strong>
          <a href="mailto:axg105@shsu.edu">axg105@shsu.edu</a>
        </strong></big></p>
    ]]></string>
    <string name="introduction_content"><![CDATA[
        <h3>Welcome to the Video Authentication Protocol Demo!</h3>
        <p>The purpose of the demo is to demonstrate a new model for
        non-repudiation, integrity and authentication of videos.
        This means someone can automatically prove that a video was recorded by their device.</p>
         <p>This occurs in three stages: </p>
        <p>1. The camera device registers itself with the manufacturer\'s database.</p>
        <p>2. For every video, the device sends an \"authentication\" request with metadata to the manufacturer.</p>
        <p>3. The manufacturer sends a \"confirm\" request to a hardware-protected key store and metadata storage on the camera that sends a reply back.</p>

        <p>In other words, the protocol works by interacting components provided by the device manufacturer.</p>
    <p>    <b><tt>Video Authentication Server</tt></b> - This is a remote database owned by the manufacturer that stores video and device metadata.</p>
    <p>    <b><tt>Video Authentication Client</tt></b> - The client device with the camera.  This app simulates the function of a hardware chip that communicates to the server.</p>
        <p>Download the Java source code to this app or  NodeJS / MySQL server code at GitHub.</p>
        <p><a href="https://github.com/alexxgathp/vap">Video Authentication Protocol Project</a></p>
    ]]></string>
     <string name="steps_content"><![CDATA[
        <h3>Stage 1: Device Registration</h3>
        <p>1. Internet-connected camera device is built by the manufacturer.</p>
        <p>2. Device is loaded with a digital signature, not viewable, but useable by the device user.</p>
        <p>3. Device is primed with an encryption public key, token and secret device ID, unknown and unavailable to the user. </p>
        <p>4. The manufacturer stores the above data with device-specific metadata in order to verify and communicate with the device later. </p>

<h3>Stage 2: Video Authentication Request</h3>
        <p>1. User records a video.</p>
        <p>2. Hardware chip receives the video.</p>
        <p>3. Hardware chip analyzes it and stores a hash of the video metadata and of the file.</p>
        <p>4. Hardware chip encrypts data payload with metadata and device identifiers using the encryption public key. </p>
        <p>5. Hardware chip digitally signs data as well. </p>
        <p>6. The encrypted data sends to the manufacturer. </p>

        <h3>Stage 3: Video Confirmation</h3>
        <p>1. The manufacturer decrypts the request and verifies the secret device ID and token.</p>
        <p>2. It records the video metadata, generates a new token, and sends an encrypted confirmation request to the device.
The confirmation request includes the old token, a hash of the metadata and file.</p>
        <p>3. The hardware chip receives the encrypted message and decrypts with encryption public key.</p>
        <p>4. If the old token matches, the new token replaces the old token. Otherwise, the message is ignored.</p>
         <p>5. Then, the hashes sent are checked against the hardware chip\'s stored hashes.</p>
        <p>6. If it matches, the devices sends an encrypted confirmation.</p>
         <p>7. The manufacturer responds by recording the video as confirmed and providing a new token for the next communication. </p>
    ]]></string>
       <string name="registration_content"><![CDATA[
        <h1>Device Registration</h1>
        <p>Communication is initiated by the device requesting registration and providing required metadata.
        The manufacturer responds by registering the device and its hardware chip, generating a secret device ID and token.
        The manufacturer sends an encrypted communication, with the secret ID and  token, that can only be decrypted by the public key
        on the hardware chip that physically protects it from being accessed by a user.</p>
        <p>If there is no token and ID, the device stores both and sends an encrypted confirmation to the cloud service of the manufacturer.
        The device also sends with each communication an identifier.
        </p>
    ]]></string>
       <string name="android_device_id"><![CDATA[
        <b>Device ID: </b>
    ]]></string>
     <string name="vap_secret_id"><![CDATA[
        <b>VAP Secret ID: </b>
    ]]></string>
     <string name="vap_token"><![CDATA[
        <b>VAP Token: </b>
    ]]></string>
       <string name="vap_old_token"><![CDATA[
        <b>VAP Previous Token: </b>
    ]]></string>
     <string name="privatekey"><![CDATA[
        <b>Private Key: </b>
    ]]></string>
     <string name="metadata"><![CDATA[
        <b>Metadata: </b>
    ]]></string>
    <string name="lessonOne_content"><![CDATA[
        <h3>Demo One: VAP Authentication Request.</h3>
        <p> This simulation is broken up into three levels of granularity,
        assuming a video is recorded by Informacam and their is a metadata file, assuming a video is recorded and metadata needs to be retrieved still,
        and the full real world situation, assuming no video is recorded yet. The first one does not work with Demo Three, as it was the first preliminary one made.
        Instead of a VAP-style metadata, it uses a metadata J3M file that must be exported by:</p>
        <h3> <a href="https://guardianproject.info/informa/">Informacam</a></h3>
     ]]></string>
    <string name="lessonOne_user">User</string>
    <string name="lessonOne_user_hint">Me</string>
    <string name="lessonOne_comment">Comment</string>
    <string name="lessonOne_editComment_hint">My comment</string>
    <string name="lessonOne_reviewed">Reviewed</string>
    <string name="send_request">Send Request</string>
    <string name="lessonTwo_content"><![CDATA[
        <h3>Demo Two: Manufacturer\'s Database.</h3>
    ]]></string>
    <string name="demoThree_content"><![CDATA[
        <h3>Demo Three: VAP Verification Request.</h3>
        <p> A VAP verification request is sent by a device that receives a video from a VAP-compliant camera device
        that claims to have produced the video. The receiving device requests with the claimer\'s device identifier, video identifier and digital signature.
        To simplify the data needed, the device ID used here is the public key, and the video ID used is the file hash matching the signature.</p>
     ]]></string>
    <string name="warning_mapsNotAvailable">
        Your device does not support Google Maps.
        Locations will be displayed in a list. To get an interactive map view,
        use a real device supporting OpenGL ES 2.0. Any model made after 2010 should be fine.</string>
    <string name="title_front_page">Video Authentication Protocol</string>
    <string name="record_video_button">Record a Video</string>
    <string name="select_video_button">Select a Video</string>
    <string name="select_metadata_button">Select J3M File</string>
    <string name="device_button">See the Devices</string>
    <string name="video_button">See the Videos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back</string>
    <string name="this_android_device_label">This Android Device</string>
    <string name="title_activity_item_details">ItemDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="simulate_video_upload">2. Simulate By Video Upload</string>
    <string name="simulate_j3m">1. Simulate With Informacam J3M</string>
    <string name="simulate_take_video">3.  Simulate By Recording Video</string>
    <string name="error_package_error">There was an error with the activity\'s package.</string>
    <string name="error_in_development">This feature is not fully implemented yet.</string>
    <string name="registered_device">Successfully registered device with manufacturer database.</string>
    <string name="error_connectivity">Failed: Connectivity error or something similar.</string>
    <string name="failed">Failed</string>
    <string name="device_registration_confirmed">Device registration has been confirmed and completed.</string>
    <string name="button_hardware_reset">Simulate VAP Hardware Reset</string>
    <string name="wipeVAP">Wiped the VAP values and set to \"Unknown\".</string>
    <string name="refresh">Refresh</string>
    <string name="refreshed">Resfreshed VAP values successfully.</string>
    <string name="sam_houston_quote">\"The benefits of education and of useful knowledge, generally diffused through a community, are essential to the preservation of a free government.\"</string>
    <string name="sam_houston">Sam Houston</string>
    <string name="error_video_metadata_no_match">The video metadata hash from the cloud does not match the local copy.</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="error_token_no_match">The token from the server and the device do not match.</string>
    <string name="video_authenticated_and_confirmed">The video is confirmed and authenticated!</string>
    <string name="requested_authentication">Sent a Video Authentication Request.</string>
    <string name="received_response_confirm_hash">Success. Confirmation response requested by manufacturer.</string>
    <string name="receive_file_hash">Reviewing file hash.</string>
    <string name="receive_metadata_hash">Reviewing metadata hash.</string>
    <string name="receive_videoID">Reviewing video ID assigned.</string>
    <string name="receive_token">Reviewing new token.</string>
    <string name="receive_old_token">Reviewing the last token.</string>
    <string name="sending_video_confirm">Sending video authentication confirmation request.</string>
    <string name="device">Device: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_was_confirmed">Was the device confirmed? </string>
    <string name="video">Video: </string>
    <string name="video_was_confirmed">Was the video confirmed? </string>
    <string name="public_key">Public Key: </string>
    <string name="metadata_no_html">Metadata: </string>
    <string name="token_no_html">Token: </string>
    <string name="oldtoken_no_html">Old Token: </string>
    <string name="device_no_html">Device: </string>
    <string name="android_device_id_no_html">Android Device ID: </string>
    <string name="hardware_title"><![CDATA[<h1>VAP Hardware Chip</h1>]]></string>
    <string name="vap_public_key"><![CDATA[
        <b>Digital Signature Public Key: </b>
    ]]></string>
    <string name="vap_encryption_key"><![CDATA[
        <b>Secret VAP Encryption Key: </b>
    ]]></string>
    <string name="exportJSON">Export VAP JSON</string>
    <string name="verifyText">Verify if matches this device</string>
    <string name="select_vap_json">Select VAP JSON To Verify</string>
    <string name="jsonExtracted">The JSON file has been exported to the Documents or Downloads directory.</string>
    <string name="jsonExtractedMain">The JSON file has been exported to the main directory.</string>
    <string name="errorExport">Error writing file. Export failed.</string>
    <string name="none">None</string>
    <string name="errorMetadataConvert">The metadata did not successfully convert to a JSONObject.</string>
</resources>